--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       <!-- method="POST" action="/api/newBurger"--> 
         <form class="form">
             <div class="form-group">
-                <input type="text" name="userInput" class="form-control" placeholder="Add burger name here"/>
+                <input type="text" class="form-control userInput" placeholder="Add burger name here"/>
             </div>                
             <button type="submit" class="btn btn-primary">Add a Burger</button>
         </form>
