--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>Burger - Sequelize</title>
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/lumen/bootstrap.min.css" />
-  <link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
+  <link rel="stylesheet" href="./css/style.css" media="screen" title="no title">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
@@ -26,20 +26,18 @@
             <button type="submit" class="btn btn-primary">Add a Burger</button>
         </form>
     </div>
-      <div>
-      <div>
-        <h3>Fresh burgers</h3>
-        <span class="burger-container">
-        </span>
+      <div class="burger-wrapper">
+        <div class="fresh-burgers">
+          <h3>Fresh burgers</h3>
+          <span class="burger-container">
+          </span>
+        </div>
+        <div class="eaten-burgers">
+          <h3>Eaten burgers</h3>
+          <span class="burger-devoured">
+          </span>
+        </div>
       </div>
-      <div>
-        <h3>Eaten burgers</h3>
-        <span class="burger-devoured">
-
-        </span>
-      </div>
-    </div>
-
   </div>
   <!-- Custom Script -->
   <script src="./js/view.js" type="text/javascript"></script>
